<resources>
    <string name="app_name">Resep Masakan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="menu_semua_menu">Semua Menu</string>
    <string name="menu_favorite">Menu Favorite</string>
    <string name="menu_makanan_berat">Makanan Berat</string>
    <string name="menu_makanan_ringan">Makanan Ringan</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>

</resources>
