<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_semua_menu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_semua_menu" />
        <item
            android:id="@+id/nav_makanan_berat"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_makanan_berat" />
        <item
            android:id="@+id/nav_makanan_ringan"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_makanan_ringan" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
